<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.question.QuestionFragment">

    <data>
        <variable
            name="quetionViewModel"
            type="com.learning.geoquiz.ui.question.QuestionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/prevBtn"
        app:layout_constraintStart_toEndOf="@+id/prevBtn">

        <TextView
            android:id="@+id/questionText"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{quetionViewModel.currentQuestion.content}"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="371dp" />


        <Button
            android:id="@+id/btn_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> quetionViewModel.checkAnswer(false)}"
            android:text="@string/btn_false"
            android:enabled="@{!quetionViewModel.blocked}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_true"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

        <Button
            android:id="@+id/btn_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> quetionViewModel.checkAnswer(true)}"
            android:text="@string/btn_true"
            android:enabled="@{!quetionViewModel.blocked}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_false"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

        <Button
            android:id="@+id/btn_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="@{() -> quetionViewModel.showAnswer()}"
            android:text="@string/it_s_too_hard_let_me_see_the_answer"
            android:enabled="@{!quetionViewModel.blocked}"
            app:layout_constraintBottom_toTopOf="@+id/prevBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_false"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="351dp" />

        <ImageView
            android:id="@+id/prevBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/previous_button"
            android:onClick="@{() -> quetionViewModel.previousQuestion()}"
            android:src="@android:drawable/ic_media_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="206dp" />

        <ImageView
            android:id="@+id/nextBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/next_button"
            android:onClick="@{() -> quetionViewModel.nextQuestion()}"
            android:src="@android:drawable/ic_media_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/prevBtn"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="206dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>